--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
+    "styled-components": "^6.1.11",
     "three": "^0.165.0"
   },
   "devDependencies": {
